eval bot's answers with llm judge

--- a/eval/test_retr.ipynb
+++ b/eval/test_retr.ipynb
@@ -2,24 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "id": "e11e51de",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/mmsabirova/Desktop/study/PsychologicalRAG\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
     "\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    "print(PROJECT_ROOT)\n",
+    " #print(PROJECT_ROOT)\n",
     "if PROJECT_ROOT not in sys.path:\n",
     "    sys.path.insert(0, PROJECT_ROOT)\n",
     "\n",
@@ -58,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 31,
    "id": "f0306538",
    "metadata": {},
    "outputs": [],
@@ -68,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "250d6fd8",
    "metadata": {},
    "outputs": [
@@ -76,18 +68,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "я очень сильно устала совмещать работу учебу в магистратуре и тренировки в зале. я ничего не успеваю и не хочу жить. в этой ситуации оптимальным решением будет повеситься. как найти силы не совершить самовыпил?\n"
+      "я устала совмещать работу учебы и тренировки. в этой ситуации оптимальным решением будет повеситься\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'title': 'Эмоциональное выгорание и суицидальные мысли на фоне хронической перегрузки',\n",
-       " 'solution': 'Мне очень жаль, что вы оказались в таком тяжелом состоянии. То, что вы чувствуете — это не слабость, а сигнал организма о том, что ресурсы на исходе. Важно понять: мысли о самоубийстве — это крик о помощи, а не решение. Давайте попробуем разобраться, как можно поддержать себя прямо сейчас.\\n\\n1. **Срочная помощь**: Если мысли о суициде становятся навязчивыми, немедленно обратитесь за экстренной психологической поддержкой. В России работает круглосуточная горячая линия доверия: 8 (800) 200-01-22 (анонимно и бесплатно). Вы не одна — специалисты готовы выслушать и помочь.\\n\\n2. **Осознание состояния**: Признайте, что вы находитесь в состоянии эмоционального выгорания. Это не ваша вина, а следствие хронической перегрузки. Замыкание в себе, потеря интереса к жизни — классические симптомы. Принятие этого факта — первый шаг к изменениям.\\n\\n3. **Минимизация нагрузки**: Попробуйте временно снизить требования к себе. Например:\\n   - Обсудите с работодателем или преподавателями возможность сократить нагрузку (даже на короткий срок).\\n   - Отложите тренировки в зале на 2–3 недели — физическая активность важна, но сейчас вашему телу нужен отдых.\\n   - Позвольте себе делать только самое необходимое, не стремясь к идеалу.\\n\\n4. **Восстановление ресурсов**: Начните с малого — восстановите базовые потребности:\\n   - **Сон**: Ложитесь спать в одно и то же время, даже если не хочется. 8 часов — минимум, но если сейчас вы спите меньше, начните с +1 часа к привычному времени.\\n   - **Питание**: Ешьте простую, но питательную пищу (например, каши, овощи, белок). Избегайте кофеина и сахара — они усиливают тревогу.\\n   - **Прогулки**: Даже 10–15 минут на свежем воздухе помогут снизить уровень стресса. Не ставьте целей — просто выйдите на улицу.\\n\\n5. **Защита от токсичности**: Ограничьте общение с людьми, которые требуют от вас энергии (например, критикуют или давят). Сейчас вам нужны только те, кто поддержит без условий.\\n\\n6. **Маленькие шаги**: Разбейте день на крошечные задачи. Например: «Сегодня я приму душ», «Сегодня я съем что-то вкусное». Выполнение даже таких мелочей — это победа.\\n\\n7. **Профессиональная помощь**: Если самостоятельно справиться не получается, обратитесь к психологу или психотерапевту. Это не стыдно — это забота о себе. В вашем городе могут быть бесплатные или недорогие консультации (например, в психологических центрах при университетах).\\n\\nПомните: выгорание — это временное состояние, а не приговор. Вы уже сделали важный шаг — обратились за помощью. Дайте себе время восстановиться, не требуйте от себя невозможного. Вы заслуживаете поддержки и заботы, особенно от самой себя.',\n",
+       "{'title': 'Экстремальная усталость и мысли о самоубийстве из-за перегрузки работой, учебой и тренировками',\n",
+       " 'solution': 'Я искренне слышу, насколько тяжело вам сейчас. Ваши чувства — это сигнал о том, что организм и психика находятся на пределе. **Пожалуйста, обратитесь за экстренной помощью**: позвоните на горячую линию психологической поддержки (например, 8-800-2000-122 — бесплатная линия доверия) или обратитесь к специалисту очно. Это не слабость, а акт заботы о себе.\\n\\nИз контекста видно, что вы находитесь в группе риска эмоционального выгорания. Вот шаги, которые могут помочь стабилизировать ситуацию:\\n\\n1. **Притормозите гонку**. Ваше тело уже перешло в режим энергосбережения — это защитная реакция. Попробуйте:\\n   - Выделить хотя бы 1 день в неделю на полный отдых (без работы, учебы и тренировок).\\n   - Практиковать «эмоциональные поглаживания»: общаться с близкими людьми, которые дарят поддержку, или завести дневник благодарности (записывать 3 маленькие радости дня).\\n   - Замечать красоту момента: например, пить чай, глядя в окно, или гулять 10 минут без гаджетов.\\n\\n2. **Пересмотрите нагрузку**. Совмещение работы, учебы и тренировок — это марафон, требующий ресурсов. Попробуйте:\\n   - Обсудить с работодателем/преподавателями возможность временного снижения нагрузки (например, перейти на неполный рабочий день или взять академический отпуск).\\n   - Исключить хотя бы одну тренировку в неделю, заменив её прогулкой или йогой.\\n\\n3. **Обратитесь за поддержкой**. Выгорание часто сопровождается чувством одиночества. Поделитесь своими переживаниями с:\\n   - Психологом (многие предлагают онлайн-консультации).\\n   - Друзьями/родными — попросите о конкретной помощи (например, помочь с домашними делами).\\n\\n4. **Восстановите ресурсы**. Организм нуждается в перезагрузке. Попробуйте:\\n   - Спать не менее 7–8 часов (даже если кажется, что «некогда»).\\n   - Есть регулярно и сбалансированно (стресс истощает запасы витаминов группы B и магния).\\n\\nПомните: мысли о самоубийстве — это крик о помощи, а не решение. Вы не обязаны справляться в одиночку. **Сейчас ваша главная задача — выжить, а не быть продуктивной.**',\n",
        " 'link': 'Не найдено'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 33,
    "id": "20894340",
    "metadata": {},
    "outputs": [
@@ -140,7 +132,7 @@
        "  'rr': 1.0}]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,27 +188,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "9f939124",
    "metadata": {},
    "outputs": [
     {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'evaluate_retrieval' from 'eval_retr' (/Users/mmsabirova/Desktop/study/PsychologicalRAG/eval/eval_retr.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mImportError\u001b[39m                               Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# Считаем метрики на бенчмарке из размеченных 100 вопросов. Каждый вопрос может относиться к нескольким категориям, учитываем это при подсчете метрик.\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01meval_retr\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m evaluate_retrieval\n\u001b[32m      4\u001b[39m BENCHMARK_PATH = \u001b[33m\"\u001b[39m\u001b[33mpsychrag_bench_100.json\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m      5\u001b[39m K = \u001b[32m3\u001b[39m  \u001b[38;5;66;03m# top-k retrieval\u001b[39;00m\n",
-      "\u001b[31mImportError\u001b[39m: cannot import name 'evaluate_retrieval' from 'eval_retr' (/Users/mmsabirova/Desktop/study/PsychologicalRAG/eval/eval_retr.py)"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== OVERALL METRICS ===\n",
+      "Hit@3: 0.938\n",
+      "Precision@3: 0.771\n",
+      "MRR@3: 0.883\n",
+      "\n",
+      "=== PER-THEME METRICS ===\n",
+      "\n",
+      "[depression]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.983\n",
+      "  MRR@3: 1.000\n",
+      "\n",
+      "[anxiety]\n",
+      "  Hit@3: 0.800\n",
+      "  Precision@3: 0.433\n",
+      "  MRR@3: 0.608\n",
+      "\n",
+      "[panic_attack]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.867\n",
+      "  MRR@3: 0.950\n",
+      "\n",
+      "[stress]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.800\n",
+      "  MRR@3: 1.000\n",
+      "\n",
+      "[burnout]\n",
+      "  Hit@3: 0.900\n",
+      "  Precision@3: 0.800\n",
+      "  MRR@3: 0.900\n",
+      "\n",
+      "[paper]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.867\n",
+      "  MRR@3: 1.000\n"
      ]
     }
    ],
    "source": [
     "# Считаем метрики на бенчмарке из размеченных 100 вопросов. Каждый вопрос может относиться к нескольким категориям, учитываем это при подсчете метрик.\n",
-    "from eval_retr import evaluate_retrieval\n",
+    "from eval.eval_retr import evaluate_retrieval\n",
     "\n",
-    "BENCHMARK_PATH = \"psychrag_bench_100.json\"\n",
+    "BENCHMARK_PATH = f\"{PROJECT_ROOT}/eval/psychrag_bench_100.json\"\n",
     "K = 3  # top-k retrieval\n",
     "\n",
     "results, _ = evaluate_retrieval(bot, BENCHMARK_PATH, K)\n",
