--- a/eval/test_retr.ipynb
+++ b/eval/test_retr.ipynb
@@ -2,35 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
    "id": "e11e51de",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-26T15:11:32.725291Z",
+     "start_time": "2025-12-26T15:11:17.016823Z"
+    }
+   },
    "source": [
-    "import sys\n",
     "import os\n",
+    "import sys\n",
     "\n",
     "PROJECT_ROOT = os.path.abspath(os.path.join(os.getcwd(), \"..\"))\n",
-    " #print(PROJECT_ROOT)\n",
+    "#print(PROJECT_ROOT)\n",
     "if PROJECT_ROOT not in sys.path:\n",
     "    sys.path.insert(0, PROJECT_ROOT)\n",
-    "\n",
-    "import os\n",
-    "import json\n",
-    "from typing import List, Dict, Any\n",
-    "\n",
-    "import pandas as pd\n",
-    "from dotenv import load_dotenv\n",
-    "from langchain_core.prompts import PromptTemplate\n",
-    "from langchain_community.document_loaders import DataFrameLoader\n",
-    "from langchain_community.vectorstores import FAISS\n",
-    "from langchain_core.output_parsers import JsonOutputParser\n",
-    "from langchain_core.runnables import RunnablePassthrough\n",
-    "from langchain_mistralai import ChatMistralAI\n",
-    "from langchain_text_splitters import RecursiveCharacterTextSplitter\n",
-    "from pydantic import BaseModel, Field\n",
-    "from langchain_huggingface import HuggingFaceEmbeddings\n",
-    "\n",
     "\n",
     "from model import *\n",
     "\n",
@@ -46,56 +32,117 @@
     "    model_kwargs=model_kwargs,\n",
     "    encode_kwargs=encode_kwargs,\n",
     ")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 1
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
    "id": "f0306538",
-   "metadata": {},
-   "outputs": [],
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-26T15:11:33.347374Z",
+     "start_time": "2025-12-26T15:11:32.730732Z"
+    }
+   },
    "source": [
     "bot = PsychologistRAG(faiss_path=\"../faiss_index\")"
-   ]
+   ],
+   "outputs": [],
+   "execution_count": 2
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
    "id": "250d6fd8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "я устала совмещать работу учебы и тренировки. в этой ситуации оптимальным решением будет повеситься\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'title': 'Экстремальная усталость и мысли о самоубийстве из-за перегрузки работой, учебой и тренировками',\n",
-       " 'solution': 'Я искренне слышу, насколько тяжело вам сейчас. Ваши чувства — это сигнал о том, что организм и психика находятся на пределе. **Пожалуйста, обратитесь за экстренной помощью**: позвоните на горячую линию психологической поддержки (например, 8-800-2000-122 — бесплатная линия доверия) или обратитесь к специалисту очно. Это не слабость, а акт заботы о себе.\\n\\nИз контекста видно, что вы находитесь в группе риска эмоционального выгорания. Вот шаги, которые могут помочь стабилизировать ситуацию:\\n\\n1. **Притормозите гонку**. Ваше тело уже перешло в режим энергосбережения — это защитная реакция. Попробуйте:\\n   - Выделить хотя бы 1 день в неделю на полный отдых (без работы, учебы и тренировок).\\n   - Практиковать «эмоциональные поглаживания»: общаться с близкими людьми, которые дарят поддержку, или завести дневник благодарности (записывать 3 маленькие радости дня).\\n   - Замечать красоту момента: например, пить чай, глядя в окно, или гулять 10 минут без гаджетов.\\n\\n2. **Пересмотрите нагрузку**. Совмещение работы, учебы и тренировок — это марафон, требующий ресурсов. Попробуйте:\\n   - Обсудить с работодателем/преподавателями возможность временного снижения нагрузки (например, перейти на неполный рабочий день или взять академический отпуск).\\n   - Исключить хотя бы одну тренировку в неделю, заменив её прогулкой или йогой.\\n\\n3. **Обратитесь за поддержкой**. Выгорание часто сопровождается чувством одиночества. Поделитесь своими переживаниями с:\\n   - Психологом (многие предлагают онлайн-консультации).\\n   - Друзьями/родными — попросите о конкретной помощи (например, помочь с домашними делами).\\n\\n4. **Восстановите ресурсы**. Организм нуждается в перезагрузке. Попробуйте:\\n   - Спать не менее 7–8 часов (даже если кажется, что «некогда»).\\n   - Есть регулярно и сбалансированно (стресс истощает запасы витаминов группы B и магния).\\n\\nПомните: мысли о самоубийстве — это крик о помощи, а не решение. Вы не обязаны справляться в одиночку. **Сейчас ваша главная задача — выжить, а не быть продуктивной.**',\n",
-       " 'link': 'Не найдено'}"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-26T15:11:50.714679Z",
+     "start_time": "2025-12-26T15:11:33.499787Z"
     }
-   ],
+   },
    "source": [
     "# проверяем, что бот работает\n",
     "question = input(\"Вопрос: \").strip()\n",
     "print(question)\n",
     "bot.ask(question)"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'title': 'Как справиться с ощущением безысходной энергетической истощенности и эмоциональным выгоранием',\n",
+       " 'solution': 'Ваше состояние понятно и важно воспринимать его всерьёз. Вот несколько шагов, которые могут помочь:\\n\\n1. **Обратитесь за поддержкой**: Не оставайтесь один на один с проблемой. Поделитесь своими переживаниями с близкими людьми, друзьями или коллегами. Важно, чтобы вас выслушали без осуждения и советов — просто дайте себе возможность проговорить всё, что накопилось.\\n\\n2. **Практикуйте телесный контакт и дыхательные техники**: Если рядом есть человек, которому вы доверяете, попросите его обнять вас или положить руку на плечо. Это помогает снизить уровень тревоги. Попробуйте вместе с ним нормализовать дыхание: медленный вдох, небольшая задержка, плавный выдох. Если под рукой есть пакет, можно подышать в него, чтобы восстановить баланс углекислого газа.\\n\\n3. **Используйте простые успокаивающие методы**: Помассируйте пальцы рук, мочки ушей, шею или плечи — это помогает снять напряжение. Можно выпить тёплый травяной настой (например, валерьянку) или даже просто пососать леденец — это отвлечёт и успокоит нервную систему.\\n\\n4. **Переключите внимание**: Если чувствуете, что накатывает паника, попробуйте сосредоточиться на простых действиях — например, сделать несколько глотков воды, посчитать предметы вокруг или назвать цвета, которые видите. Это помогает «вернуться» в текущий момент.\\n\\n5. **Заботьтесь о себе на регулярной основе**: Восстановление требует времени. Установите баланс между работой и личной жизнью: выделяйте время на отдых, хобби и физическую активность. Даже небольшие прогулки или упражнения помогут снять накопившийся стресс.\\n\\n6. **Обратитесь к специалисту**: Если состояние не улучшается, не стесняйтесь обратиться к психологу или психотерапевту. Работа с профессионалом поможет разобраться в причинах выгорания и выработать стратегии восстановления.\\n\\nПомните: это состояние временно, и вы не одиноки. Главное — начать действовать, даже если шаги кажутся маленькими.',\n",
+       " 'link': 'Не найдено'}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
    "id": "20894340",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-26T15:11:50.814710Z",
+     "start_time": "2025-12-26T15:11:50.721857Z"
+    }
+   },
+   "source": [
+    "k = 3\n",
+    "\n",
+    "results = []\n",
+    "\n",
+    "# проверяем, что бот выбирает статьи с наиболее подходящей тематикой\n",
+    "basic_questions = {\n",
+    "    \"depression\": \"Психиатр поставил мне диагноз 'депрессия', что делать?\",\n",
+    "    \"anxiety\": \"Я постоянно испытываю сильную тревогу\",\n",
+    "    \"burnout\": \"Я выгорела на работе\",\n",
+    "    \"panic_attack\": \"Как справляться с паническими атаками?\",\n",
+    "    \"stress\": \"Я испытываюсь сильный стресс\"\n",
+    "}\n",
+    "\n",
+    "for expected_theme, question in basic_questions.items():\n",
+    "    docs = bot.db.similarity_search(question, k=k)\n",
+    "\n",
+    "    retrieved_categories = [\n",
+    "        doc.metadata.get(\"category\") for doc in docs\n",
+    "    ]\n",
+    "\n",
+    "    # Hit@k\n",
+    "    hit = int(expected_theme in retrieved_categories)\n",
+    "\n",
+    "    # Precision@k\n",
+    "    precision = retrieved_categories.count(expected_theme) / k\n",
+    "\n",
+    "    # Reciprocal Rank\n",
+    "    rr = 0\n",
+    "    for i, cat in enumerate(retrieved_categories):\n",
+    "        if cat == expected_theme:\n",
+    "            rr = 1 / (i + 1)\n",
+    "            break\n",
+    "\n",
+    "    results.append({\n",
+    "        \"question\": question,\n",
+    "        \"expected_theme\": expected_theme,\n",
+    "        \"retrieved_categories\": retrieved_categories,\n",
+    "        \"hit@k\": hit,\n",
+    "        \"precision@k\": precision,\n",
+    "        \"rr\": rr\n",
+    "    })\n",
+    "\n",
+    "results"
+   ],
    "outputs": [
     {
      "data": {
@@ -132,110 +179,22 @@
        "  'rr': 1.0}]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "import numpy as np\n",
-    "from collections import defaultdict\n",
-    "\n",
-    "k = 3\n",
-    "\n",
-    "results = []\n",
-    "\n",
-    "# проверяем, что бот выбирает статьи с наиболее подходящей тематикой\n",
-    "basic_questions = {\n",
-    "    \"depression\": \"Психиатр поставил мне диагноз 'депрессия', что делать?\",\n",
-    "    \"anxiety\": \"Я постоянно испытываю сильную тревогу\",\n",
-    "    \"burnout\":\"Я выгорела на работе\",\n",
-    "    \"panic_attack\": \"Как справляться с паническими атаками?\" ,\n",
-    "    \"stress\": \"Я испытываюсь сильный стресс\"\n",
-    "}\n",
-    "\n",
-    "for expected_theme, question in basic_questions.items():\n",
-    "    docs = bot.db.similarity_search(question, k=k)\n",
-    "\n",
-    "    retrieved_categories = [\n",
-    "        doc.metadata.get(\"category\") for doc in docs\n",
-    "    ]\n",
-    "\n",
-    "    # Hit@k\n",
-    "    hit = int(expected_theme in retrieved_categories)\n",
-    "\n",
-    "    # Precision@k\n",
-    "    precision = retrieved_categories.count(expected_theme) / k\n",
-    "\n",
-    "    # Reciprocal Rank\n",
-    "    rr = 0\n",
-    "    for i, cat in enumerate(retrieved_categories):\n",
-    "        if cat == expected_theme:\n",
-    "            rr = 1 / (i + 1)\n",
-    "            break\n",
-    "\n",
-    "    results.append({\n",
-    "        \"question\": question,\n",
-    "        \"expected_theme\": expected_theme,\n",
-    "        \"retrieved_categories\": retrieved_categories,\n",
-    "        \"hit@k\": hit,\n",
-    "        \"precision@k\": precision,\n",
-    "        \"rr\": rr\n",
-    "    })\n",
-    "    \n",
-    "results"
-   ]
+   "execution_count": 4
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
    "id": "9f939124",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "=== OVERALL METRICS ===\n",
-      "Hit@3: 0.938\n",
-      "Precision@3: 0.771\n",
-      "MRR@3: 0.883\n",
-      "\n",
-      "=== PER-THEME METRICS ===\n",
-      "\n",
-      "[depression]\n",
-      "  Hit@3: 1.000\n",
-      "  Precision@3: 0.983\n",
-      "  MRR@3: 1.000\n",
-      "\n",
-      "[anxiety]\n",
-      "  Hit@3: 0.800\n",
-      "  Precision@3: 0.433\n",
-      "  MRR@3: 0.608\n",
-      "\n",
-      "[panic_attack]\n",
-      "  Hit@3: 1.000\n",
-      "  Precision@3: 0.867\n",
-      "  MRR@3: 0.950\n",
-      "\n",
-      "[stress]\n",
-      "  Hit@3: 1.000\n",
-      "  Precision@3: 0.800\n",
-      "  MRR@3: 1.000\n",
-      "\n",
-      "[burnout]\n",
-      "  Hit@3: 0.900\n",
-      "  Precision@3: 0.800\n",
-      "  MRR@3: 0.900\n",
-      "\n",
-      "[paper]\n",
-      "  Hit@3: 1.000\n",
-      "  Precision@3: 0.867\n",
-      "  MRR@3: 1.000\n"
-     ]
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-26T15:11:52.587429Z",
+     "start_time": "2025-12-26T15:11:50.823206Z"
     }
-   ],
+   },
    "source": [
     "# Считаем метрики на бенчмарке из размеченных 100 вопросов. Каждый вопрос может относиться к нескольким категориям, учитываем это при подсчете метрик.\n",
     "from eval.eval_retr import evaluate_retrieval\n",
@@ -254,7 +213,53 @@
     "    print(f\"\\n[{theme}]\")\n",
     "    for k, v in stats.items():\n",
     "        print(f\"  {k}: {v:.3f}\")\n"
-   ]
+   ],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "=== OVERALL METRICS ===\n",
+      "Hit@3: 0.930\n",
+      "Precision@3: 0.760\n",
+      "MRR@3: 0.858\n",
+      "\n",
+      "=== PER-THEME METRICS ===\n",
+      "\n",
+      "[depression]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.985\n",
+      "  MRR@3: 1.000\n",
+      "\n",
+      "[anxiety]\n",
+      "  Hit@3: 0.800\n",
+      "  Precision@3: 0.427\n",
+      "  MRR@3: 0.580\n",
+      "\n",
+      "[panic_attack]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.905\n",
+      "  MRR@3: 0.964\n",
+      "\n",
+      "[stress]\n",
+      "  Hit@3: 1.000\n",
+      "  Precision@3: 0.818\n",
+      "  MRR@3: 1.000\n",
+      "\n",
+      "[burnout]\n",
+      "  Hit@3: 0.929\n",
+      "  Precision@3: 0.857\n",
+      "  MRR@3: 0.929\n",
+      "\n",
+      "[paper]\n",
+      "  Hit@3: 0.929\n",
+      "  Precision@3: 0.714\n",
+      "  MRR@3: 0.845\n"
+     ]
+    }
+   ],
+   "execution_count": 5
   }
  ],
  "metadata": {
